@@ -1,6 +1,7 @@
 2016-02-20  Danilo Chang  <ray2501@gmail.com>
 
-    * Replace Tcl_GetString to Tcl_GetStringFromObj
+	* Update DBNAME config command Tcl_WrongNumArgs string
+	* Replace Tcl_GetString to Tcl_GetStringFromObj
 
 2015-10-23  Danilo Chang  <ray2501@gmail.com>
 
